[package]
name = "lan-party-tools"
version = "0.3.0"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["steam", "gaming", "network"]
categories = ["command-line-utilities", "games"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="2.33.0", features=["yaml"] }
systemstat = "0.1.5"
reqwest = { version="0.10.2", features=["blocking"] }
fs_extra = "1.1.0"
regex = "1.3.4"
lazy_static = "1.4.0"
pbr = "1.0.2"
